--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Next Star</h1>
+								<h1>Next Star System</h1>
 								<p>Easy to learn but hard to master physics based robot game!<br />
 								 Assemble your epic team of space robots, Visit a Star and then "Next Star"! and Extend your realm in galaxy!<br />
 								 
@@ -226,7 +226,7 @@
 								<li id="Contact_Us">Contact Us</li>
 								<ul> 
 									<p style="font-size:90%;">
-											If you have any questions about this Privacy Policy, please contact us by email: nextstarsystem@gmail.com
+											If you have any questions about this Privacy Policy, please contact us by email: contact@studiofrequence.com
 									</p>
 								</ul>
 								
