--- a/index.html
+++ b/index.html
@@ -138,11 +138,7 @@
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
-      <div class='star'>
-		<div class="logo">
-			<span class="icon fa-gem"></span>
-		</div>
-	  </div>
+      <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
