--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="assets/css/flag-icon.css" rel="stylesheet">
 		<link href="assets/css/stars.css" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" href="images/favicon.png">
 </head>
 <body class="is-preload">
 <div class='container'>
@@ -16,7 +17,11 @@
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
-      <div class='star'></div>
+      <div class='star'>
+		<div>
+			<img src="images/img3.png" width = "100" height = "100"/>
+		</div>
+	  </div>
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
@@ -216,7 +221,7 @@
 									<iframe width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 								</div>
 								<div class = "content" style="width:100%;height:10px;border:0px solid #000;"></div>
-								<div id = "container" > 
+								<div id = "container" class = "icons"> 
 									<a id="apple-appstore-link" href="https://itunes.apple.com/app/rumble-hockey/id1481319925">
 										<img src="images/apple-appstore-badge.png" width = "230" height = "68">
 									</a>
