--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 							<div class="inner">
 								<h2>Next Star System</h2>
 								<div class="video-responsive">
-									<iframe width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+									<iframe width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" loading="lazy"></iframe>
 								</div>
 								<div class = "content" style="width:100%;height:10px;border:0px solid #000;"></div>
 								<div id = "container" class = "icons"> 
