--- a/french.html
+++ b/french.html
@@ -7,6 +7,7 @@
 		<link href="assets/css/flag-icon.css" rel="stylesheet">
 		<link href="assets/css/stars.css" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" href="images/favicon.png">
 </head>
 <body class="is-preload">
 <div class='container'>
@@ -76,7 +77,11 @@
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
-      <div class='star'></div>
+      <div class='star'>
+	  	<div>
+			<img src="images/img3.png" width = "60" height = "60"/>
+		</div>
+	  </div>
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
@@ -138,11 +143,7 @@
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
-      <div class='star'>
-		<div class="logo">
-			<span class="icon fa-gem"></span>
-		</div>
-	  </div>
+      <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
@@ -170,7 +171,7 @@
       <div class='star'></div>
       <div class='star'></div>
     </div>
-    <div class='layer' data-depth='0.70' id='stars-big'>
+    <div class='layer' data-depth='0.90' id='stars-big'>
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
@@ -215,18 +216,18 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h2>Next Star System</h2>
+								<h1>Next Star System</h1>
 								<div class="video-responsive">
-									<iframe width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+									<iframe width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" loading="lazy"></iframe>
 								</div>
 								<div class = "content" style="width:100%;height:10px;border:0px solid #000;"></div>
-								<div id = "container" > 
-									<a id="apple-appstore-link" href="https://itunes.apple.com/app/rumble-hockey/id1481319925">
+								<div id = "container" class = "icons"> 
+									<a id="apple-appstore-link" href="#header">
 										<img src="images/apple-appstore-badge.png" width = "230" height = "68">
 									</a>
 								</div>
 								<div class = "content" style="width:100%;height:20px;border:0px solid #000;"></div>
-								<h2>Join the discussion</h2>
+								<h3>Join the discussion</h3>
 								<div >
 									<ul class="icons">
 										<li><a href="https://www.facebook.com/gaming/NextStarSystem" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -244,7 +245,7 @@
 							<ul>
 								<!--<li><a href="#contact">Contact us</a></li>-->
 								<li><a href="#PrivacyPolicy">Privacy Policy</a></li>
-								<!--<li><a href="#TermsOfService">Terms of service</a></li>-->
+								<li><a href="#TermsOfService">Terms of service</a></li>
 								<!--<li><a href="#ParentsGuide">Parent's Guide</a></li>-->
 								
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -252,9 +253,9 @@
 						</nav>
 						<ul class="icons">
 									<!--<li><li><a href="german.html" class="flag-icon flag-icon-de" title="Deutsch"></a></li>-->
-									<li><a href="#header"  class="flag-icon flag-icon-us" title="English"></a></li>
+									<li><a href="index.html"  class="flag-icon flag-icon-us" title="English"></a></li>
 									<!--<li><li><a href="spanish.html" class="flag-icon flag-icon-es" title="Español"></a></li>-->
-									<li><li><a href="french.html" class="flag-icon flag-icon-fr" title="Français"></a></li>
+									<li><li><a href="#header" class="flag-icon flag-icon-fr" title="Français"></a></li>
 									<!--<li><li><a href="italian.html" class="flag-icon flag-icon-it" title="Italiano"></a></li>-->
 									<!--<li><li><a href="portuguese.html" class="flag-icon flag-icon-pt" title="português"></a></li>-->
 									<!--<li><li><a href="finnish.html" class="flag-icon flag-icon-fi" title="Suomi"></a></li>-->
@@ -423,7 +424,7 @@
 								<li id="Contact_Us">Contact Us</li>
 								<ul> 
 									<p style="font-size:90%;">
-											If you have any questions about this Privacy Policy, please contact us by email: contact@studiofrequence.com
+											If you have any questions about this Privacy Policy, please contact us by email: contact[at]studiofrequence.com
 									</p>
 								</ul>
 								
@@ -432,7 +433,7 @@
 						<!-- TermsOfService -->
 							<article id="TermsOfService">
 								<h2 class="major">Terms Of Service</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/img4.png" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
