google analytics added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 <head>
-		<title>StudioFrequnce</title>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=274607866"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', '274607866');
+		</script>
+		<!-- End Google Analytics -->
+		<title>StudioFrequence</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -274,8 +284,8 @@
 							<article id="PrivacyPolicy">
 								<h2 class="major">Privacy Policy</h2>
 								<h4>Effective Date: January 1st, 2021</h4>
-								<p>Thank you for playing NextStar! This Privacy Policy describes The ways we collect personal data about you and why we do so, How we use your personal data and The choices you have about your personal data.<br/>
-								    By installing "NextStar" you understand and consent to this Privacy Policy.</p>
+								<p>Thank you for playing NextStarSystem! This Privacy Policy describes The ways we collect personal data about you and why we do so, How we use your personal data and The choices you have about your personal data.<br/>
+								    By installing "NextStarSystem" you understand and consent to this Privacy Policy.</p>
 								
 								<ul>
 									<li> 
@@ -441,7 +451,7 @@
 						<!-- ParentsGuide -->
 							<article id="ParentsGuide">
 								<h2 class="major">Parents Guide</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/img4.png" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
