--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<link href="assets/css/stars.css" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" href="images/favicon.png">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body class="is-preload">
 <div class='container'>
@@ -230,13 +232,13 @@
 								<div class="video-responsive">
 									<iframe width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" loading="lazy"></iframe>
 								</div>
-								<div class = "content" style="width:100%;height:10px;border:0px solid #000;"></div>
-								<div id = "container" class = "icons"> 
+								<div style="width:100%;height:10px;border:0px solid #000;"></div>
+								<div class = "icons"> 
 									<a id="apple-appstore-link" href="#header">
 										<img src="images/apple-appstore-badge.png" width = "230" height = "68">
 									</a>
 								</div>
-								<div class = "content" style="width:100%;height:20px;border:0px solid #000;"></div>
+								<div style="width:100%;height:20px;border:0px solid #000;"></div>
 								<h3>Join the discussion</h3>
 								<div >
 									<ul class="icons">
@@ -251,6 +253,7 @@
 								</div>
 							</div>
 						</div>
+						
 						<nav>
 							<ul>
 								<!--<li><a href="#contact">Contact us</a></li>-->
