--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 </head>
-<body class="is-preload">
+<body class="is-preload" onload = "loading()">
+
+<div id = "loading" class = "loader">
+	<img id="loading-image" src = "images/loading.gif"/>
+</div>
+
 <div class='container'>
   <div data-pointer-events='true' id='scene'>
 
@@ -479,6 +484,11 @@
 <script>
 var scene = $('#scene').get(0);
 var parallax = new Parallax(scene);
+var load = document.getElementById("loading");
+function loading() 
+{
+load.style.display = 'none';
+}
 </script>
 </body>
 </html>
