loading gif updated

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 								</div>
 								<div style="width:100%;height:10px;border:0px solid #000;"></div>
 								<div class = "icons"> 
-									<a id="apple-appstore-link" href="#header">
+									<a id="apple-appstore-link" href="#ComingSoon">
 										<img src="images/apple-appstore-badge.png" width = "230" height = "68">
 									</a>
 								</div>
@@ -287,7 +287,11 @@
 
 				<!-- Main -->
 					<div id="main">
-
+							<article id="ComingSoon">
+								<h2 class="major">Coming Soon!</h2>
+								<span class="image main"><img src="images/img4.png" alt="" /></span>
+							</article>
+								
 						<!-- PrivacyPolicy -->
 							<article id="PrivacyPolicy">
 								<h2 class="major">Privacy Policy</h2>
