--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 							<ul>
 								<!--<li><a href="#contact">Contact us</a></li>-->
 								<li><a href="#PrivacyPolicy">Privacy Policy</a></li>
-								<li><a href="#TermsOfService">Terms of service</a></li>
+								<!--<li><a href="#TermsOfService">Terms of service</a></li>-->
 								<!--<li><a href="#ParentsGuide">Parent's Guide</a></li>-->
 								
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -273,7 +273,7 @@
 									<!--<li><li><a href="german.html" class="flag-icon flag-icon-de" title="Deutsch"></a></li>-->
 									<li><a href="#header"  class="flag-icon flag-icon-us" title="English"></a></li>
 									<!--<li><li><a href="spanish.html" class="flag-icon flag-icon-es" title="Español"></a></li>-->
-									<li><li><a href="french.html" class="flag-icon flag-icon-fr" title="Français"></a></li>
+									<!--<li><li><a href="french.html" class="flag-icon flag-icon-fr" title="Français"></a></li>-->
 									<!--<li><li><a href="italian.html" class="flag-icon flag-icon-it" title="Italiano"></a></li>-->
 									<!--<li><li><a href="portuguese.html" class="flag-icon flag-icon-pt" title="português"></a></li>-->
 									<!--<li><li><a href="finnish.html" class="flag-icon flag-icon-fi" title="Suomi"></a></li>-->
