--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="is-preload" onload = "loading()">
 
 <div id = "loading" class = "loader">
-	<img id="loading-image" src = "images/loading.gif"/>
+	
 </div>
 
 <div class='container'>
@@ -228,7 +228,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<img src="images/favicon.png" width="100%" height="100%"/>
 							
 						</div>
 						<div class="content">
