--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 </head>
 <body class="is-preload" onload = "loading()">
 
-<div id = "loading" class = "loader">
-	
-</div>
+<div id = "loading" class="dot-spinner-48x48"></div>
 
 <div class='container'>
   <div data-pointer-events='true' id='scene'>
