--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
 								<h3>Join the discussion</h3>
 								<div >
 									<ul class="icons">
-										<li><a href="https://www.facebook.com/gaming/NextStarSystem" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									    <li><a href="https://twitter.com/nextstarsystem" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									    <li><a href="https://instagram.com/nextstarsystem" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.youtube.com/channel/UC0JrlQ8j2CJ5OfAjX9aqiaQ" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-									    <li><a href="https://www.reddit.com/r/NextStarSystem" class="icon brands fa-reddit"><span class="label">Reddit</span></a></li>
-										<li><a href="https://www.twitch.tv/nextstarsystem" class="icon brands fa-twitch"><span class="label">Twitch</span></a></li>
-										<li><a href="https://discord.gg/FAcV3D5abS" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://www.facebook.com/gaming/NextStarSystem" target="_blank" rel="noopener noreferrer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									    <li><a href="https://twitter.com/nextstarsystem" target="_blank" rel="noopener noreferrer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									    <li><a href="https://instagram.com/nextstarsystem" target="_blank" rel="noopener noreferrer" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.youtube.com/channel/UC0JrlQ8j2CJ5OfAjX9aqiaQ" target="_blank" rel="noopener noreferrer" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+									    <li><a href="https://www.reddit.com/r/NextStarSystem" target="_blank" rel="noopener noreferrer" class="icon brands fa-reddit"><span class="label">Reddit</span></a></li>
+										<li><a href="https://www.twitch.tv/nextstarsystem" target="_blank" rel="noopener noreferrer" class="icon brands fa-twitch"><span class="label">Twitch</span></a></li>
+										<li><a href="https://discord.gg/FAcV3D5abS" target="_blank" rel="noopener noreferrer" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 									</ul>
 								</div>
 							</div>
