--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@ var parallax = new Parallax(scene);
 var load = document.getElementById("loading");
 function loading() 
 {
-load.style.display = 'none';
+	getRandomImage()
+	load.style.display = 'none';
 }
 </script>
 </body>
