--- a/index.html
+++ b/index.html
@@ -487,15 +487,12 @@
 var scene = $('#scene').get(0);
 var parallax = new Parallax(scene);
 var imgs = ['img1.jpg','img2.jpg','img3.jpg','img4.jpg','img5.jpg','img6.jpg','img7.jpg','img8.jpg','img9.jpg','img10.jpg','img11.jpg','img12.jpg','img13.jpg','img14.jpg','img15.jpg','img16.jpg','img17.jpg','img18.jpg','img19.jpg','img20.jpg','img21.jpg','img22.jpg','img23.jpg','img24.jpg','img25.jpg','img26.jpg','img27.jpg','img28.jpg','img29.jpg','img30.jpg','img31.jpg'];
-function getRandomImage() {
-    var num = Math.floor( Math.random() * imgs.length);
-    var img = imgs[num];
-    document.getElementById('randImage').src =  ('images/' + imgs[rnd]);
-}
 var load = document.getElementById("loading");
 function loading() 
 {
-	getRandomImage()
+	var num = Math.floor( Math.random() * imgs.length);
+	var img = imgs[num];
+	document.getElementById('randImage').src =  ('images/' + img);
 	load.style.display = 'none';
 }
 </script>
