--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 <script >
 var scene = $('#scene').get(0);
 var parallax = new Parallax(scene);
-var imgs = ['img1.jpg','img2.jpg','img3.jpg','img4.jpg','img5.jpg','img6.jpg','img7.jpg','img8.jpg','img9.jpg','img10.jpg','img11.jpg','img12.jpg','img13.jpg','img14.jpg','img15.jpg','img16.jpg','img17.jpg','img18.jpg','img19.jpg','img20.jpg','img21.jpg','img22.jpg','img23.jpg','img24.jpg','img25.jpg','img26.jpg','img27.jpg','img28.jpg','img29.jpg','img30.jpg','img31.jpg'];
+var imgs = ['img1.PNG','img2.PNG','img3.PNG','img4.PNG','img5.PNG','img6.PNG','img7.PNG','img8.PNG','img9.PNG','img10.PNG','img11.PNG','img12.PNG','img13.PNG','img14.PNG','img15.PNG','img16.PNG','img17.PNG','img18.PNG','img19.PNG','img20.PNG','img21.PNG','img22.PNG','img23.PNG','img24.PNG','img25.PNG','img26.PNG','img27.PNG','img28.PNG','img29.PNG','img30.PNG','img31.PNG'];
 var load = document.getElementById("loading");
 function loading() 
 {
