--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 <script >
 var scene = $('#scene').get(0);
 var parallax = new Parallax(scene);
-var imgs = ['img1.PNG','img2.PNG','img3.PNG','img4.PNG','img5.PNG','img6.PNG','img7.PNG','img8.PNG','img9.PNG','img10.PNG','img11.PNG','img12.PNG','img13.PNG','img14.PNG','img15.PNG','img16.PNG','img17.PNG','img18.PNG','img19.PNG','img20.PNG','img21.PNG','img22.PNG','img23.PNG','img24.PNG','img25.PNG','img26.PNG','img27.PNG','img28.PNG','img29.PNG','img30.PNG','img31.PNG'];
+var imgs = ['img1.png','img2.png','img3.png','img4.png','img5.png','img6.png','img7.png','img8.png','img9.png','img10.png','img11.png','img12.png','img13.png','img14.png','img15.png','img16.png','img17.png','img18.png','img19.png','img20.png','img21.png','img22.png','img23.png','img24.png','img25.png','img26.png','img27.png','img28.png','img29.png','img30.png','img31.png'];
 var load = document.getElementById("loading");
 function loading() 
 {
