--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class='star'></div>
       <div class='star'>
 	  	<div>
-			<img src="images/img3.png" width = "60" height = "60"/>
+			<img id="randImage2" width = "60" height = "60"/>
 		</div>
 	  </div>
       <div class='star'></div>
@@ -493,6 +493,9 @@ function loading()
 	var num = Math.floor( Math.random() * imgs.length);
 	var img = imgs[num];
 	document.getElementById('randImage').src =  ('images/' + img);
+	var num2 = Math.floor( Math.random() * imgs.length);
+	var img2 = imgs[num2];
+	document.getElementById('randImage2').src =  ('images/' + img);
 	load.style.display = 'none';
 }
 </script>
