--- a/index.html
+++ b/index.html
@@ -490,9 +490,9 @@ var load = document.getElementById("loading");
 function loading() 
 {
 	var num = Math.floor( Math.random() * 134);
-	document.getElementById('randImage').src =  ('images/' + num);
+	document.getElementById('randImage').src =  ('images2/' + num);
 	var num2 = Math.floor( Math.random() * 134h);
-	document.getElementById('randImage2').src =  ('images/' + num2);
+	document.getElementById('randImage2').src =  ('images2/' + num2);
 	load.style.display = 'none';
 }
 </script>
