--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ function loading()
 {
 	var num = Math.floor( Math.random() * 134);
 	document.getElementById('randImage').src =  ('images2/' + num);
-	var num2 = Math.floor( Math.random() * 134h);
+	var num2 = Math.floor( Math.random() * 134);
 	document.getElementById('randImage2').src =  ('images2/' + num2);
 	load.style.display = 'none';
 }
