--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@ var parallax = new Parallax(scene);
 var load = document.getElementById("loading");
 function loading() 
 {
-	var num = Math.floor( Math.random() * 134);
+	var num = Math.floor( Math.random() * 133) + 1;
 	document.getElementById('randImage').src =  ('images2/img' + num + '.png');
-	var num2 = Math.floor( Math.random() * 134);
+	var num2 = Math.floor( Math.random() * 133) + 1;
 	document.getElementById('randImage2').src =  ('images2/img' + num2 + '.png');
 	load.style.display = 'none';
 }
