--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
 		<link rel="icon" href="images/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-		<script src="cookieRedirect.js"></script>
-	   	<script>
-			var num = Math.floor( Math.random() * 133) + 1;
-			document.getElementById('randImage').src =  ('images2/img' + num + '.png');
-			var num2 = Math.floor( Math.random() * 133) + 1;
-			document.getElementById('randImage2').src =  ('images2/img' + num2 + '.png');
-	    	</script>
 </head>
 <body class="is-preload" onload = "loading()">
 
@@ -490,12 +483,16 @@
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-<script >
+<script  src="cookieRedirect.js">
 var scene = $('#scene').get(0);
 var parallax = new Parallax(scene);
 var load = document.getElementById("loading");
 function loading() 
 {
+	var num = Math.floor( Math.random() * 133) + 1;
+	document.getElementById('randImage').src =  ('images2/img' + num + '.png');
+	var num2 = Math.floor( Math.random() * 133) + 1;
+	document.getElementById('randImage2').src =  ('images2/img' + num2 + '.png');
 	load.style.display = 'none';
 }
 </script>
