--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 </head>
-<body class="is-preload" onload = "loading()">
+<body onload = "loading()">
 
 <div id = "loading" class="dot-spinner-48x48"></div>
 
