--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class='star'></div>
       <div class='star'>
 	  	<div>
-			<img id="randImage2" width = "130" height = "60"/>
+			<img id="randImage2" width = "130" height = "60" BORDER="0"/>
 		</div>
 	  </div>
       <div class='star'></div>
