--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class='star'></div>
       <div class='star'>
 	  	<div>
-			<img id="randImage2" width = "130" height = "60" BORDER="0"/>
+			<img id="randImage2"/>
 		</div>
 	  </div>
       <div class='star'></div>
@@ -492,6 +492,8 @@ function loading()
 	document.getElementById('randImage').src =  ('images2/img' + num + '.png');
 	var num2 = Math.floor( Math.random() * 133) + 1;
 	document.getElementById('randImage2').src =  ('images2/img' + num2 + '.png');
+	document.getElementById('randImage2').width =  "130";
+	document.getElementById('randImage2').height = "60";
 	load.style.display = 'none';
 }
 </script>
