--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 		<link rel="icon" href="images/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+		<script
+		  async
+		  src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@latest/dist/lazyload.min.js"
+		></script>
 </head>
 <body class="is-preload" onload = "loading()">
 
@@ -233,7 +237,7 @@
 							<div class="inner">
 								<h1>Next Star System</h1>
 								<div class="video-responsive">
-									<iframe width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" loading="lazy"></iframe>
+									<iframe class="lazy" width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" ></iframe>
 								</div>
 								<div style="width:100%;height:10px;border:0px solid #000;"></div>
 								<div class = "icons"> 
