--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 							<div class="inner">
 								<h1>Next Star System</h1>
 								<div class="video-responsive">
-									<iframe class="lazy" width="800" height="450" src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" ></iframe>
+									<iframe class="lazy" width="800" height="450" data-src="https://www.youtube.com/embed/4H4TUkaE1kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" ></iframe>
 								</div>
 								<div style="width:100%;height:10px;border:0px solid #000;"></div>
 								<div class = "icons"> 
