--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
 <script src="assets/js/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 <script type="text/javascript">
+new LazyLoad({ elements_selector: `.lazy`});
 var scene = $('#scene').get(0);
 var parallax = new Parallax(scene);
 var load = document.getElementById("loading");
