--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class='star'></div>
       <div class='star'>
 	    <div>
-			<img calss = "imgcenter" id="randImage" />
+			<img style="vertical-align:middle;margin:0px -600px" id="randImage" />
 		</div>
 	    </div>
       <div class='star'></div>
