--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
-      <div class='star'></div>
+      <div class='star'>
+	    <div>
+			<img src='images/ufo.png' />
+		</div>
+	    </div>
       <div class='star'></div>
       <div class='star'></div>
       <div class='star'></div>
