--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		  gtag('config', '274607866');
 		</script>
 		<!-- End Google Analytics -->
-		<title>StudioFrequence</title>
+		<title>Studio Frequence inc</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
