--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class='star'></div>
       <div class='star'>
 	    <div>
-			<img src='images/ufo.png' />
+			<img src='images/ufo.png' width='300' height='300' />
 		</div>
 	    </div>
       <div class='star'></div>
