--- a/404.html
+++ b/404.html
@@ -239,7 +239,7 @@
 						</div>
 						<ul class="icons">
 									<!--<li><li><a href="german.html" class="flag-icon flag-icon-de" title="Deutsch"></a></li>-->
-									<li><a href="index.htm"  class="flag-icon flag-icon-us" title="English"></a></li>
+									<li><a href="index.html"  class="flag-icon flag-icon-us" title="English"></a></li>
 									<!--<li><li><a href="spanish.html" class="flag-icon flag-icon-es" title="Español"></a></li>-->
 									<!--<li><li><a href="french.html" class="flag-icon flag-icon-fr" title="Français"></a></li>-->
 									<!--<li><li><a href="italian.html" class="flag-icon flag-icon-it" title="Italiano"></a></li>-->
