--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 </head>
-<body class="is-preload" onload = "loading()>
+<body class="is-preload">
 
 <div class='container'>
   <div data-pointer-events='true' id='scene'>
