--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
 		<link rel="icon" href="images/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-		<script
-		  async
-		  src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@latest/dist/lazyload.min.js"
-		></script>
+		<script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.6.0/dist/lazyload.min.js"></script>
 </head>
 <body class="is-preload" onload = "loading()">
 
