--- a/index.html
+++ b/index.html
@@ -785,5 +785,6 @@ function loading()
 	load.style.display = 'none';
 }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.6.0/dist/lazyload.min.js"></script>
 </body>
 </html>
