--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 						</div>
 						<div style = "width: 5%; float: left;"></div>
 						<div style = "width: 90%; float: left;">
-							<h2> How To Play Next Star System</h2>
+							<h2> How To Play</h2>
 							<ul>
 									<li> 
 										<p style="font-size:80%; text-align:left;">Next Star System is a Sci-fi strategic robot battle game with fun game play.
