--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
 								<h1>Next Star System</h1>
 								<div class="video-responsive">
 <!-- 									<iframe class="lazy" width="1920" height="1080" data-src="https://youtu.be/pdxkbJt-LFw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" ></iframe> -->
-									<iframe class="lazy" width="560" height="315" src="https://www.youtube.com/embed/pdxkbJt-LFw" title="Next Star System" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-								</div>
+									<iframe class="lazy" width="560" height="315" src="https://www.youtube.com/embed/5T13D2376qU" title="Next Star System" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>								</div>
 								<div style="width:100%;height:10px;border:0px solid #000;"></div>
 								<div class = "icons"> 
 									<a id="apple-appstore-link" href="#ComingSoon">
