--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 									<iframe class="lazy" width="560" height="315" src="https://www.youtube.com/embed/5T13D2376qU" title="Next Star System" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>								</div>
 								<div style="width:100%;height:10px;border:0px solid #000;"></div>
 								<div class = "icons"> 
-									<a id="apple-appstore-link" href="#ComingSoon">
+									<a id="apple-appstore-link" href="https://apps.apple.com/ca/app/next-star-system/id1571575924">
 										<img src="images/apple-appstore-badge.png" width = "230" height = "68">
 									</a>
 								</div>
