--- a/french.html
+++ b/french.html
@@ -260,7 +260,7 @@
 									</a>
 								</div>
 								<div style="width:100%;height:20px;border:0px solid #000;"></div>
-								<h3>Rejoignez la conversation</h3>
+								<h3>Joignez-vous à la conversation</h3>
 								<div >
 									<ul class="icons">
 										<li><a href="https://www.facebook.com/gaming/NextStarSystem" target="_blank" rel="noopener noreferrer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
